--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 # Dependency directories
 */node_modules/
 */jspm_packages/
+*/dist
 
 # TypeScript v1 declaration files
 */typings/
@@ -59,3 +60,6 @@
 
 # next.js build output
 */.next
+
+# DS_Store file
+*/.DS_Store
