--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,14 @@
     "bookshelf": "^0.13.3",
     "bookshelf-paranoia": "^0.13.0",
     "cookie-parser": "^1.4.4",
+    "cookie-session": "^1.3.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-mailer": "^0.3.1",
     "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
     "morgan": "~1.9.0",
     "mysql": "^2.17.1",
