--- a/backend/sample.env
+++ b/backend/sample.env
@@ -1,17 +1,17 @@
 # Database setup
-DB_HOSTNAME=
-DB_USERNAME=
-DB_PASSWORD=
-DB_NAME=
+DB_HOSTNAME=localhost
+DB_USERNAME=root
+DB_PASSWORD=123Secret
+DB_NAME=eventReporter
 
 # Project endpoints setup
-HOST=
-FRONTEND_BASE=
+HOST=http://localhost:3000/api/
+FRONTEND_BASE=http://localhost:8080/
 
 # Secret setup
-JWT_SECRET=
-SESSION_SECRET=
+JWT_SECRET=BoiceaIsLife
+SESSION_SECRET=session_secret
 
 # AWS credentials setup
-S3_SECRET_KEY=
-S3_ACCESS_KEY=
+S3_SECRET_KEY=M6gzD++3QrO1nZOz0sf+8SDHbW1od3IvpDZq1cBb
+S3_ACCESS_KEY=AKIAJD3I6VOVVS62YORA
