--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap-vue": "^2.1.0",
     "core-js": "^3.3.2",
     "dotenv": "^8.2.0",
     "jquery": "^3.4.1",
@@ -16,7 +18,8 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.2.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
