--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "vue-resource": "^1.5.1",
     "vue-router": "^3.1.3",
     "vue2-leaflet": "^2.2.1",
+    "vuelidate": "^0.7.4",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.7.0"
   },
